--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,23 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<input mentio
+  ng-model="theText"
+  mentio-id="'theText'"
+  type="text"
+  class="form-control"
+  ng-trim="false"
+  size="100"/>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<mentio-menu
+  mentio-for="'theText'"
+  mentio-trigger-char="'#'"
+  mentio-items="projects"
+  mentio-template-url="/views/project-mentions.tpl"
+  mentio-search="searchProjects(term)"
+  mentio-select="getProjectTextRaw(item)"></mentio-menu>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<mentio-menu
+  mentio-for="'theText'"
+  mentio-trigger-char="'@'"
+  mentio-items="people"
+  mentio-template-url="views/people-mentions.tpl"
+  mentio-search="searchPeople(term)"
+  mentio-select="getPeopleTextRaw(item)"></mentio-menu>
