Show entries on main

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,3 +29,7 @@
   mentio-template-url="views/minute-mentions.tpl"
   mentio-search="searchMinutes(term)"
   mentio-select="getMinuteTextRaw(item)"></mentio-menu>
+
+<ul class="list-group">
+  <entry ng-repeat="entry in entries" />
+</ul>
