Add addEntry functionality

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,8 @@
   type="text"
   class="form-control"
   ng-trim="false"
-  size="100"/>
+  size="100"
+  ng-enter="addEntry(theText)"/>
 
 <mentio-menu
   mentio-for="'theText'"
