Rename tpl views to html

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
   mentio-for="'theText'"
   mentio-trigger-char="'#'"
   mentio-items="projects"
-  mentio-template-url="/views/project-mentions.tpl"
+  mentio-template-url="/views/project-mentions.html"
   mentio-search="searchProjects(term)"
   mentio-select="getProjectTextRaw(item)"></mentio-menu>
 
@@ -22,7 +22,7 @@
   mentio-for="'theText'"
   mentio-trigger-char="'@'"
   mentio-items="people"
-  mentio-template-url="views/people-mentions.tpl"
+  mentio-template-url="views/people-mentions.html"
   mentio-search="searchPeople(term)"
   mentio-select="getPeopleTextRaw(item)"></mentio-menu>
 
@@ -30,7 +30,7 @@
   mentio-for="'theText'"
   mentio-trigger-char="'+'"
   mentio-items="minutes"
-  mentio-template-url="views/minute-mentions.tpl"
+  mentio-template-url="views/minute-mentions.html"
   mentio-search="searchMinutes(term)"
   mentio-select="getMinuteTextRaw(item)"></mentio-menu>
 
